--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,4 +1,4 @@
-<div class="container" style="padding: 6rem 0;">
+<div class="container page-content">
   <h1>{{ page.title }}</h1>
   <div class="rte">
     {{ page.content }}
