--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -34,13 +34,13 @@
 </head>
 <body class="template-{{ template.name | handle }}">
 
-  {% section 'header' %}
+  {% render 'header' %}
 
   <main id="MainContent" role="main">
     {{ content_for_layout }}
   </main>
 
-  {% section 'footer' %}
+  {% render 'footer' %}
 
   <!-- JavaScript Files -->
   <script src="{{ 'utils.js' | asset_url }}" defer></script>
