--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,6 +1,13 @@
-<div class="container page-content">
-  <h1>{{ page.title }}</h1>
-  <div class="rte">
-    {{ page.content }}
+{% comment %}
+  Check if this page has a JSON template with sections
+{% endcomment %}
+{% if template contains 'json' %}
+  {% comment %} Page uses JSON template with sections - content will be rendered automatically {% endcomment %}
+{% else %}
+  <div class="container page-content">
+    <h1>{{ page.title }}</h1>
+    <div class="rte">
+      {{ page.content }}
+    </div>
   </div>
-</div>
+{% endif %}
