--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,13 +1,10 @@
 {% comment %}
-  Check if this page has a JSON template with sections
+  Only render basic page content for pages that don't have JSON templates with sections
+  Pages with JSON templates (like page.features.json) will automatically render their sections
 {% endcomment %}
-{% if template contains 'json' %}
-  {% comment %} Page uses JSON template with sections - content will be rendered automatically {% endcomment %}
-{% else %}
-  <div class="container page-content">
-    <h1>{{ page.title }}</h1>
-    <div class="rte">
-      {{ page.content }}
-    </div>
+<div class="container page-content">
+  <h1>{{ page.title }}</h1>
+  <div class="rte">
+    {{ page.content }}
   </div>
-{% endif %}
+</div>
