--- a/sections/what-you-get.liquid
+++ b/sections/what-you-get.liquid
@@ -128,6 +128,7 @@
   .what-you-get-section {
     padding: 80px 20px;
     background: rgba(10, 10, 10, 0.5);
+    min-height: 400px;
   }
 
   .section-header {
