Convert page.features from JSON to liquid template

--- a/templates/page.features.liquid
+++ b/templates/page.features.liquid
@@ -1,4 +1,6 @@
+{% section 'header' %}
 {% section 'hero' %}
 {% section 'trading-bot' %}
 {% section 'indicators' %}
 {% section 'what-you-get' %}
+{% section 'footer' %}
