Update indicators section and features template

--- a/templates/page.features.liquid
+++ b/templates/page.features.liquid
@@ -5,7 +5,9 @@
 
 {% assign hero_settings = '{"show_badge":true,"badge_text":"Professional Trading Tools","hero_title_line1":"Bot Suite","hero_title_line2":"Automated Trading Made Simple","hero_subtitle":"Automated trading with professional indicators and strategies - everything you need to trade smarter","primary_button_text":"View Plans","primary_button_link":"/pages/products","show_stats":false}' %}
 
+{% section 'header' %}
 {% section 'hero' %}
 {% section 'trading-bot' %}
 {% section 'indicators' %}
 {% section 'what-you-get' %}
+{% section 'footer' %}
