Update page.features.liquid template

--- a/templates/page.features.liquid
+++ b/templates/page.features.liquid
@@ -1,3 +1,5 @@
+{% section 'header' %}
+
 {% comment %}
   Features page template
 {% endcomment %}
@@ -160,3 +162,5 @@
 </section>
 
 <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
+
+{% section 'footer' %}
